Avancement dans le rapport.

--- a/AwesomeBall/Latex/bilan.tex
+++ b/AwesomeBall/Latex/bilan.tex
@@ -1,4 +1,4 @@
-\chapter{Bilan}
+\chapter{Conclusion}
 
 %Rappel du context
 Intro / Rappel Contexte
@@ -22,14 +22,5 @@ Bla
 Bla\\
 
 Bla
-
-Bla
-
-\newpage
-
-%Conclusion/Perspectives
-Bla
-
-Bla\\
 
 Bla
