--- a/AwesomeBall/Latex/title.tex
+++ b/AwesomeBall/Latex/title.tex
@@ -2,7 +2,7 @@
 \begin{center}
 
 % Upper part of the page. The '~' is needed because only works if a paragraph has started.
-\includegraphics[width=0.35\textwidth]{./TerrainAvecJoueur.png}~\\[1cm]
+\includegraphics[width=15cm]{./TerrainAvecJoueur.png}~\\[1cm]
 
 \textsc{\LARGE Langage avancé de programmation}\\[1.5cm]
 
@@ -20,7 +20,7 @@ GénialBall \\[0.4cm] }
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Auteur:}\\
-Nicolas Sias 2TL1
+Nicolas Sias 2TL1\\
 Youri Mouton 2TL2
 \end{flushleft}
 \end{minipage}
@@ -32,9 +32,6 @@ Youri Mouton 2TL2
 \end{minipage}
 
 \vfill
-
-% Bottom of the page
-{\large \today}
 
 \end{center}
 \end{titlepage}
