--- a/AwesomeBall/Latex/resultats.tex
+++ b/AwesomeBall/Latex/resultats.tex
@@ -1,55 +1,27 @@
-\chapter{Résultats}
+\chapter{Description de votre stratégie de validation}
 
-\section{Partie 1}
+\section{Utilisation d'un package test}
 
-Intro
+Pour tester les points importants de notre jeu, nous avons créé plusieurs classes "test" dans un package mis à l'écart. Voici le contenu du package "test" :
 
-\subsection{Sous-partie 1}
+\paragraph*{ClientTest.java :}
+Cette classe sert à détecter les erreurs de réception et/ou d'envoi de chaînes de caractères au serveur.  
 
-\paragraph*{Paragraphe 1 (n'apparaitra pas dans l'index)} Bla
+\paragraph*{ExitButtonTest.java :} Elle sert à vérifier si le bouton "Exit" lorsque le joueur 2 quitte la partie fonctionne.
 
-\paragraph*{Paragraphe 2} Bla
+\paragraph*{FieldTest.java :} Elle sert à détecter des erreurs lors de l'initialisation du Field, en liant le contrôle au visuel, utilisant du JUnit Testing
 
-\paragraph*{Paragraphe 3} Bla
+\paragraph*{InetTest.java :} Elle vérifie la détection de l'IP local par java (et savoir, par la même occasion, l'IP local du joueur lançant cette application).
 
-\subsection{Sous-partie 2}
 
-Bla
+\paragraph*{SwingWorkerTest :} Elle teste la recherche d'IP local (donc la classe DiscoverLocal.java).
 
-\subsection{Sous-partie 3}
+\paragraph*{TextFieldTest :} Cette classe, utilisant le JUnit Testing, vérifie si l'affichage textuelle sur le terrain fonctionne. 
 
-Bla
+\section{JUnit Testing :}
 
-\section{Partie 2}
+On a utilisé le JUnit Testing principalement pour l'affichage textuelle sur le terrain ( via la classe TextFieldTest) ainsi que pour l'initialisation du terrain, en liant le contrôle au visuel (via la classe FieldTest)
 
-Intro
+\section{System.out.println}
 
-\subsection*{Sous-partie 1 ('apparaitra pas dans l'index)} Bla
-
-\paragraph*{Paragraphe 1 ('apparaitra pas dans l'index)} Bla
-
-\paragraph*{Paragraphe 2} Bla
-
-\paragraph*{Paragraphe 3} Bla
-
-\newpage
-
-\subsection*{Sous-partie 2}
-
-Bla
-
-%galerie d'image
-\begin{figure}[htp]
-  \centering
-  \subfloat[Première image]{\label{fig:première}\includegraphics[scale=0.8]{resultats/gallerie}}
-  ~ %espace entre deux images sur une même ligne
-  \subfloat[Deuxième image]{\label{fig:deuxième}\includegraphics[scale=0.8]{resultats/gallerie}}
-  ~
-  \subfloat[Troisième image]{\label{fig:troisième}\includegraphics[scale=0.8]{resultats/gallerie}}
-  ~\\ %saute une ligne dans la galerie d'image
-  \subfloat[Quatrième image]{\label{fig:quatrième}\includegraphics[scale=0.8]{resultats/gallerie}}
-  ~
-  \subfloat[Cinquième image]{\label{fig:cinquième}\includegraphics[scale=0.8]{resultats/gallerie}}
-  \caption{Différents screenshots quelque chose, en gallerie}
-  \label{fig:gallerie1}
-\end{figure}
+Cette méthode a été utilisé très fréquemment pour détecter les collisions entre les objets (balle, terrain et joueur) .
