--- a/AwesomeBall/Latex/existant.tex
+++ b/AwesomeBall/Latex/existant.tex
@@ -4,7 +4,7 @@
 \begin{center}
 %taille de l'image en largeur
 %remplacer "width" par "height" pour régler la hauteur
-\includegraphics[width=15cm]{presentation/schema}
+\includegraphics[width=18cm]{./UML}
 \end{center}
-\caption{Extrait UML des classes joueur}
+\caption{Extrait UML des classes terrain}
 \end{figure}
