--- a/AwesomeBall/Latex/presentation.tex
+++ b/AwesomeBall/Latex/presentation.tex
@@ -12,23 +12,32 @@ Lancez l'application, choississez d'être le client ou le serveur ( un joueur do
 \begin{center}
 %taille de l'image en largeur
 %remplacer "width" par "height" pour régler la hauteur
-\includegraphics[width=15cm]{presentation/schema}
-\end{center}
+\includegraphics[width=5cm]{./ScanningNetwork}
 %légende de l'image
-\caption{Interface de connexion au jeu}
+\caption{Le jeu va d'abord chercher les autres machines connectées dans le réseau local.}
+\end{center}
+\end{figure}
+
+\begin{figure}[!h]
+\begin{center}
+%taille de l'image en largeur
+%remplacer "width" par "height" pour régler la hauteur
+\includegraphics[width=5cm]{./ChooseYourIp}
+%légende de l'image
+\caption{Sélectionnez ensuite l'IP local de votre adversaire}
+\end{center}
 \end{figure}
 
 \newpage
 
-\section{Interface}
+\section{Interface du jeu}
 %inclusion d'une mage dans le document
 \begin{figure}[!h]
 \begin{center}
 %taille de l'image en largeur
 %remplacer "width" par "height" pour régler la hauteur
-\includegraphics[width=15cm]{presentation/schema}
+\includegraphics[width=20cm]{./InterfaceGraph}
 \end{center}
-\caption{Interface du jeu}
 \end{figure}
 
 \section {Les contrôles du jeu}
@@ -36,6 +45,6 @@ Lancez l'application, choississez d'être le client ou le serveur ( un joueur do
 \begin{itemize}
 \item Utilisez les touches directionnelles pour déplacer votre vaisseau.
 \item Appuyez sur la barre d'espace si vous désirez faire un tir avec la balle.
-\item Si vous désirez quitter, cliquez sur la touche "Exit".
+\item Si vous désirez quitter, cliquez sur la touche "Exit" ou appuyez sur Esc.
 \end{itemize}
 
